- Improved: the rounding increment can now also be applied for tax classes (#2505)
- Improved: the rounding increment is now applied on the grand total too (#2341)
- Improved: Make Company Details accessible in Invoice Template (#2239)
- Improved: Add uniqid to order mail wildcards (#2531)
- Improved: disable checkout navigation on payment and processing steps (#2529)
- Fixed radio button events in Internet Explorer (Ticket #484)
- Fixed products DCA not loaded in rare cases
- Fixed: hide customer definied fields in product edit mode
- Fixed low price calculation for advanced prices
- Fixed sorting by module configuration (#2037)
- Fixed backend category sorting, updated DC_TablePageId driver (#2101)
- Fixed invisible subgroups when no product in parent group (#2121)
- Fixed potential issue in email addresses (#2041)
- Fixed invalid markup in several templates (#2081)
- Fixed related products loaded from product cache (#2236)
- Fixed product cache not considering product start date (#2230)
- Fixed issue with variant generator and prices (#2046)
- Fixed copy/paste of product variants into its own product
- Fixed order of country and states (#2486)
- Fixed replace $ in mootools with document.id for isotope.js and backend.js (#2200)
- Fixed assignment of uniqid in ModuleIsotopeCheckout::writeOrder() (#2531)
- Fixed: added missing comma after "sortBy" field in tl_iso_attributes
- Dropped unimplemented enableGoogleAnalytics checkbox in store config (#2102)

Version 1.3.beta2 (2011-08-28)
------------------------------
- Added: runonce script will automatically generate groups based on categories (pages)
- Added support for multilingual foreignKey in attribute table
- Added a salutation text field to addresses (Ticket #329)
- Added invisible hint to active step in checkout module (Ticket #331)
- Added new rule product conditions to limit by product attribute
- Added option to invert the rule condition (match/match not)