@@ -33,6 +33,7 @@ Version 1.3.rc1 (2011-??-??)
 - Improved: Make Company Details accessible in Invoice Template (#2239)
 - Improved: Add uniqid to order mail wildcards (#2531)
 - Improved: disable checkout navigation on payment and processing steps (#2529)
+- Improved: start and stop date are now fixed fields, available on all product types
 - Fixed radio button events in Internet Explorer (Ticket #484)
 - Fixed products DCA not loaded in rare cases
 - Fixed: hide customer definied fields in product edit mode
